changing to bootstrap 3 danger from important to get the red background for permissions, and fixing collection detail spacing when there is no description

--- a/app/assets/stylesheets/file-listing.css.scss
+++ b/app/assets/stylesheets/file-listing.css.scss
@@ -17,6 +17,7 @@ $gray-lighter: #eee;
           }
           dd {
             margin-left: -15px;
+            min-height: 1.5em;
           }
         }
       }
